--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  font-family: "LuckiestSoftieProExtraBold-Regular";
+  font-family: 'BoldenVan', sans-serif;
 }
 
 @media only screen and (max-width: 600px) {
